@@ -1849,6 +1849,32 @@ name|ArtifactOrigin
 name|origin
 parameter_list|)
 block|{
+if|if
+condition|(
+name|isOriginalMetadataArtifact
+argument_list|(
+name|artifact
+argument_list|)
+condition|)
+block|{
+return|return
+name|IvyPatternHelper
+operator|.
+name|substitute
+argument_list|(
+name|getIvyPattern
+argument_list|()
+operator|+
+literal|".original"
+argument_list|,
+name|artifact
+argument_list|,
+name|origin
+argument_list|)
+return|;
+block|}
+else|else
+block|{
 return|return
 name|IvyPatternHelper
 operator|.
@@ -1862,6 +1888,7 @@ argument_list|,
 name|origin
 argument_list|)
 return|;
+block|}
 block|}
 comment|/**      * Saves the information of which resolver was used to resolve a md, so that this info can be      * retrieve later (even after a jvm restart) by getSavedResolverName(ModuleDescriptor md)      *       * @param md      *            the module descriptor resolved      * @param name      *            resolver name      */
 specifier|private
@@ -5230,15 +5257,40 @@ block|{
 return|return
 name|DefaultArtifact
 operator|.
-name|cloneWithAnotherName
+name|cloneWithAnotherType
 argument_list|(
 name|moduleArtifact
 argument_list|,
 name|moduleArtifact
 operator|.
-name|getName
+name|getType
 argument_list|()
 operator|+
+literal|".original"
+argument_list|)
+return|;
+block|}
+specifier|private
+name|boolean
+name|isOriginalMetadataArtifact
+parameter_list|(
+name|Artifact
+name|artifact
+parameter_list|)
+block|{
+return|return
+name|artifact
+operator|.
+name|isMetadata
+argument_list|()
+operator|&&
+name|artifact
+operator|.
+name|getType
+argument_list|()
+operator|.
+name|endsWith
+argument_list|(
 literal|".original"
 argument_list|)
 return|;
