@@ -27232,6 +27232,14 @@ argument_list|(
 name|cache
 argument_list|)
 expr_stmt|;
+name|ivy
+operator|.
+name|getSettings
+argument_list|()
+operator|.
+name|validate
+argument_list|()
+expr_stmt|;
 name|ResolveReport
 name|report
 init|=
@@ -27285,6 +27293,20 @@ argument_list|(
 name|cache
 argument_list|,
 literal|"apache/mymodule/task2/1748/ivy.xml"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+operator|new
+name|File
+argument_list|(
+name|cache
+argument_list|,
+literal|"apache/mymodule/task2/1748/ivy.xml.original"
 argument_list|)
 operator|.
 name|exists
